Landing: spacing fixes

--- a/_sass/_landing.scss
+++ b/_sass/_landing.scss
@@ -45,12 +45,11 @@
         .interaktiv {
             background-image: linear-gradient($color-secondary-light, $color-secondary-light);
             box-shadow: -11px 11px 46px 0px rgba(0, 0, 0, 0.35);
-            width: calc(50% + 30px);
         }
 
         h2 {
             color: $color-primary-dark;
-            font-size: 2.4em; //40px;
+            font-size: 2.2em;
             margin-top: 87px;
         }
 
